syntax = "proto3";

option csharp_namespace = "AuthService";

package auth;

service AuthProtoService {

    rpc RegisterUser (UserRequest) returns (UserReply);
    rpc AuthenticateUser (UserRequest) returns (AuthenticateUserReply);
}

message AuthenticateUserReply {
	bool success = 1;
	optional UserReply user = 2;
}

message UserReply{
	int32 id = 1;
	string login = 2;
	string password = 3;
}

message UserRequest{
	string login = 1;
	string password = 2;
}
