syntax = "proto3";

option csharp_namespace = "AuthorisationService";

package passwordbox;

service AuthorisationProtoService {

    rpc RegisterUser (RegisterUserRequest) returns (UserReply);
    rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserReply);
}

message RegisterUserRequest {
    string login = 1;
    string passsword = 2;
}

message AuthenticateUserRequest {
	string login = 1;
	string password = 2;
}

message AuthenticateUserReply {
	bool success = 1;
}

message UserReply{
	int32 id = 1;
	string login = 2;
	string password = 3;
}
